fixed spacing in between ball and text box

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ body{
 .ball{
     width: 300px;
     height: 300px;
+    margin-bottom: 8%;
     background-color: rgb(0, 0, 0);
     border-radius: 50%;
     display: flex;
